Removing warnings to synthetize this project.

--- a/1.PipelinedMIPS/PipelinedMIPS32.qsf
+++ b/1.PipelinedMIPS/PipelinedMIPS32.qsf
@@ -37,16 +37,14 @@
 # -------------------------------------------------------------------------- #
 
 
-set_global_assignment -name FAMILY "Cyclone V"
-set_global_assignment -name DEVICE 5CGXFC7C7F23C8
+set_global_assignment -name FAMILY "Cyclone II"
+set_global_assignment -name DEVICE EP2C35F672C6
 set_global_assignment -name TOP_LEVEL_ENTITY PipelinedMIPS32
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 14.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "16:56:06  OCTOBER 04, 2014"
-set_global_assignment -name LAST_QUARTUS_VERSION 14.0
+set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
@@ -55,6 +53,7 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name VHDL_FILE PipelinedMIPS32.vhd
+set_global_assignment -name VHDL_FILE 0.CL/exception_ctrl.vhd
 set_global_assignment -name VHDL_FILE 0.CL/hazard_ctrl.vhd
 set_global_assignment -name VHDL_FILE 0.CL/forwarding_ctrl.vhd
 set_global_assignment -name VHDL_FILE 1.IF.vhd
@@ -81,4 +80,7 @@ set_global_assignment -name VHDL_FILE 4.MEM/exe_mem_reg.vhd
 set_global_assignment -name VHDL_FILE 4.MEM/data_mem.vhd
 set_global_assignment -name VHDL_FILE 5.WB.vhd
 set_global_assignment -name VHDL_FILE 5.WB/mem_wb_reg.vhd
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
+set_location_assignment PIN_G26 -to boot
+set_location_assignment PIN_N2 -to clk
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
