--- a/1.PipelinedMIPS/PipelinedMIPS32.qsf
+++ b/1.PipelinedMIPS/PipelinedMIPS32.qsf
@@ -63,36 +63,6 @@ set_location_assignment PIN_AD22 -to MemWrite_pin
 set_location_assignment PIN_AD23 -to Branch_pin
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name VHDL_FILE 4.MEM/sram_control.vhd
-set_global_assignment -name VHDL_FILE 4.MEM/mem_control.vhd
-set_global_assignment -name VHDL_FILE PipelinedMIPS32.vhd
-set_global_assignment -name VHDL_FILE 0.CL/exception_ctrl.vhd
-set_global_assignment -name VHDL_FILE 0.CL/hazard_ctrl.vhd
-set_global_assignment -name VHDL_FILE 0.CL/forwarding_ctrl.vhd
-set_global_assignment -name VHDL_FILE 1.IF.vhd
-set_global_assignment -name VHDL_FILE 1.IF/reg_pc.vhd
-set_global_assignment -name VHDL_FILE 1.IF/inst_mem.vhd
-set_global_assignment -name VHDL_FILE 2.ID.vhd
-set_global_assignment -name VHDL_FILE 2.ID/if_id_reg.vhd
-set_global_assignment -name VHDL_FILE 2.ID/seu.vhd
-set_global_assignment -name VHDL_FILE 2.ID/regfile.vhd
-set_global_assignment -name VHDL_FILE 2.ID/control_inst_decode.vhd
-set_global_assignment -name VHDL_FILE 3.EXE.vhd
-set_global_assignment -name VHDL_FILE 3.EXE/id_exe_reg.vhd
-set_global_assignment -name VHDL_FILE 3.EXE/alu_control.vhd
-set_global_assignment -name VHDL_FILE 3.EXE/alu.vhd
-set_global_assignment -name VHDL_FILE 3.EXE/alu/alu_shifter.vhd
-set_global_assignment -name VHDL_FILE 3.EXE/alu/alu_multiplier.vhd
-set_global_assignment -name VHDL_FILE 3.EXE/alu/alu_core.vhd
-set_global_assignment -name VHDL_FILE 3.EXE/alu/alu_1bit_overflow_detection.vhd
-set_global_assignment -name VHDL_FILE 3.EXE/alu/alu_1bit_alu_msb.vhd
-set_global_assignment -name VHDL_FILE 3.EXE/alu/alu_1bit_alu.vhd
-set_global_assignment -name VHDL_FILE 3.EXE/alu/alu_1bit_adder.vhd
-set_global_assignment -name VHDL_FILE 4.MEM.vhd
-set_global_assignment -name VHDL_FILE 4.MEM/exe_mem_reg.vhd
-set_global_assignment -name VHDL_FILE 4.MEM/data_mem.vhd
-set_global_assignment -name VHDL_FILE 5.WB.vhd
-set_global_assignment -name VHDL_FILE 5.WB/mem_wb_reg.vhd
 set_location_assignment PIN_AC8 -to SRAM_ADDR[17]
 set_location_assignment PIN_AB8 -to SRAM_ADDR[16]
 set_location_assignment PIN_Y10 -to SRAM_ADDR[15]
@@ -132,4 +102,37 @@ set_location_assignment PIN_AE9 -to SRAM_LB_N
 set_location_assignment PIN_AD10 -to SRAM_OE_N
 set_location_assignment PIN_AF9 -to SRAM_UB_N
 set_location_assignment PIN_AE10 -to SRAM_WE_N
+set_global_assignment -name VHDL_FILE 1.IF/sdram_control.vhd
+set_global_assignment -name SOURCE_FILE 1.IF/sdram_control.cmp
+set_global_assignment -name VHDL_FILE 4.MEM/sram_control.vhd
+set_global_assignment -name VHDL_FILE 4.MEM/mem_control.vhd
+set_global_assignment -name VHDL_FILE PipelinedMIPS32.vhd
+set_global_assignment -name VHDL_FILE 0.CL/exception_ctrl.vhd
+set_global_assignment -name VHDL_FILE 0.CL/hazard_ctrl.vhd
+set_global_assignment -name VHDL_FILE 0.CL/forwarding_ctrl.vhd
+set_global_assignment -name VHDL_FILE 1.IF.vhd
+set_global_assignment -name VHDL_FILE 1.IF/reg_pc.vhd
+set_global_assignment -name VHDL_FILE 1.IF/inst_mem.vhd
+set_global_assignment -name VHDL_FILE 2.ID.vhd
+set_global_assignment -name VHDL_FILE 2.ID/if_id_reg.vhd
+set_global_assignment -name VHDL_FILE 2.ID/seu.vhd
+set_global_assignment -name VHDL_FILE 2.ID/regfile.vhd
+set_global_assignment -name VHDL_FILE 2.ID/control_inst_decode.vhd
+set_global_assignment -name VHDL_FILE 3.EXE.vhd
+set_global_assignment -name VHDL_FILE 3.EXE/id_exe_reg.vhd
+set_global_assignment -name VHDL_FILE 3.EXE/alu_control.vhd
+set_global_assignment -name VHDL_FILE 3.EXE/alu.vhd
+set_global_assignment -name VHDL_FILE 3.EXE/alu/alu_shifter.vhd
+set_global_assignment -name VHDL_FILE 3.EXE/alu/alu_multiplier.vhd
+set_global_assignment -name VHDL_FILE 3.EXE/alu/alu_core.vhd
+set_global_assignment -name VHDL_FILE 3.EXE/alu/alu_1bit_overflow_detection.vhd
+set_global_assignment -name VHDL_FILE 3.EXE/alu/alu_1bit_alu_msb.vhd
+set_global_assignment -name VHDL_FILE 3.EXE/alu/alu_1bit_alu.vhd
+set_global_assignment -name VHDL_FILE 3.EXE/alu/alu_1bit_adder.vhd
+set_global_assignment -name VHDL_FILE 4.MEM.vhd
+set_global_assignment -name VHDL_FILE 4.MEM/exe_mem_reg.vhd
+set_global_assignment -name VHDL_FILE 4.MEM/data_mem.vhd
+set_global_assignment -name VHDL_FILE 5.WB.vhd
+set_global_assignment -name VHDL_FILE 5.WB/mem_wb_reg.vhd
+set_global_assignment -name QIP_FILE 1.IF/sdram_control.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
